# lamp

./: CMakeLists.txt  LICENSE  Makefile  MiniAcceleratorSimulator  README.md
include/: Accelerator.h  Device.h  Magnet.h  PowerSupply.h  TemperatureSensor.h
src/: Accelerator.cpp  Device.cpp  Magnet.cpp  PowerSupply.cpp  TemperatureSensor.cpp  main.cpp
